--- a/src/Services/Discount/Discount.API/Discount.API.csproj
+++ b/src/Services/Discount/Discount.API/Discount.API.csproj
@@ -2,21 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <DockerComposeProjectPath>../../../docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Swashbuckle.AspNetCore.SwaggerGen" />
     <None Remove="Swashbuckle.AspNetCore" />
     <None Remove="Controllers\" />
     <None Remove="Entities\" />
-    <None Remove="Microsoft.Extensions.Caching.StackExchangeRedis" />
+    <None Remove="Npgsql" />
+    <None Remove="Dapper" />
     <None Remove="Repositories\" />
-    <None Remove="Newtonsoft.Json" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Npgsql" Version="6.0.3" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
