implemented the ordering api

--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,12 @@
 ﻿{
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+  },
+  "EmailSettings": {
+    "FromAddress": "josepholabode14@gmail.com",
+    "ApiKey": "",
+    "FromName": "Oluwaseun"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
