--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -7,6 +7,9 @@
     "ApiKey": "",
     "FromName": "Oluwaseun"
   },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
